Fixed color of "Quoting:" in dark mode. Ignore the ten's place when verifying quotes to accommodate for half-timezones. Fixed not trigger on certain server message types Also, ignore blank messages completely.

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -791,10 +791,6 @@ textarea .dark {
     border: 1px #000000 solid;
 }
 
-i {
-    color: #333;
-}
-
 .dark input {
     background-color: #333333;
 }
